Changelog for django-x509
=========================

0.5 (unreleased)
----------------

- Add Python3 and Django 1.10 support.


0.4 (2017-06-21)
----------------

- Add Django 1.9 support. (#20)


0.3 (2015-12-08)
----------------

- Add migrations for Django models. Fix Django 1.8 error.


0.2 (2015-11-24)
----------------

- Django 1.8 compatibility


0.1 (2014-04-10)
----------------

- Initial commit.