@@ -24,8 +24,9 @@ class Certificate(models.Model):
 
 class GenericCertificateM2M(models.Model):
     """Link a Certificate to any other object (User, object)."""
-    certificate = models.ForeignKey(Certificate, related_name='attachees')
-    content_type = models.ForeignKey(ContentType)
+    certificate = models.ForeignKey(Certificate, related_name='attachees',
+                                    on_delete=models.CASCADE)
+    content_type = models.ForeignKey(ContentType, on_delete=models.CASCADE)
     object_id = models.PositiveIntegerField()
     content_object = GenericForeignKey('content_type', 'object_id')
 
